// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadAndHighlightInstructions component when the student has not started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsButton={false}
  studentHighlights={Array []}
>
  <div
    className="read-and-highlight-container hide-on-mobile"
  >
    <DirectionsSection
      activeStep={1}
      className="hide-on-mobile"
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
      showReadTheDirectionsButton={false}
    >
      <div
        className="hide-on-mobile"
      >
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <ul>
            <li>
              Use information from the text to finish the sentence.
            </li>
            <li>
              Put the information in your own words.
            </li>
          </ul>
        </section>
        <section
          className="task-section"
        >
          <h3>
            Task
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSection>
    <section
      className="highlight-section"
    >
      <h3>
        Highlights
      </h3>
      <div
        className="highlight-instructions"
      >
        <p>
          Your highlights will appear here.
        </p>
      </div>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;

exports[`ReadAndHighlightInstructions component when the student has started making highlights renders 1`] = `
<ReadAndHighlightInstructions
  activeStep={1}
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  removeHighlight={[Function]}
  showReadTheDirectionsButton={false}
  studentHighlights={
    Array [
      "This is a highlight made by a student.",
    ]
  }
>
  <div
    className="read-and-highlight-container"
  >
    <DirectionsSection
      activeStep={1}
      className="hide-on-mobile"
      inReflection={false}
      passage={
        Object {
          "highlight_prompt": "",
        }
      }
      showReadTheDirectionsButton={false}
    >
      <div
        className="hide-on-mobile"
      >
        <section
          className="directions-section"
        >
          <h3>
            Directions
          </h3>
          <ul>
            <li>
              Use information from the text to finish the sentence.
            </li>
            <li>
              Put the information in your own words.
            </li>
          </ul>
        </section>
        <section
          className="task-section"
        >
          <h3>
            Task
          </h3>
          <p>
            As you read, highlight two sentences 
            <u />
          </p>
        </section>
      </div>
    </DirectionsSection>
    <section
      className="highlight-section"
    >
      <h3>
        Highlights
      </h3>
      <DisplayStudentHighlight
        inReflection={false}
        key="This is a highlight made by a student."
        removeHighlight={[Function]}
        studentHighlight="This is a highlight made by a student."
      >
        <div
          className="display-student-highlight"
        >
          <span>
            This is a highlight made by a student.
          </span>
          <button
            className="interactive-wrapper focus-on-light"
            onClick={[Function]}
            type="button"
          >
            <img
              alt="Icon showing a gray circle with a horizontal white line inside of it"
              src="undefined/images/icons/icons-remove.svg"
            />
          </button>
        </div>
      </DisplayStudentHighlight>
    </section>
  </div>
</ReadAndHighlightInstructions>
`;
